# band-structure-eigen

./: .gitignore  CMakeLists.txt  README.txt  funcs.h  main.cpp  matrix.h  minimal.ipynb  tensor_lattice.h  tensor_matrix.h  testing.ipynb  value_definitions.h  vec3.h  viewer.py
matrix_module/: matrix.h
module/: tensor_lattice.h  tensor_matrix.h  value_definitions.h
